Fixed MIX issue

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	a:hover , a:focus {background-color:#99FF99; outline:dashed thin #030;}
 	 
 	    </style>
-		<link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css"/>
+		<link href="//www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css"/>
 	</head>
 <body>
    <header> <img src="images/HTML5_Logo.png" width="128" height="128" alt="HTML5 logo" id="logo">
